src/main/gui/main.css
@font-face {
    src: url("file:../../font/HandwritingRegular-owLLA.otf");
}

#background{
    -fx-background-image: url("file:../../images/oak-background.jpg");
}

.text{
    -fx-font-family: "handwriting";
}

.label{
    -fx-text-alignment: center;
    -fx-text-fill: white;

}
.label, .button{
-fx-font-size: 30;
}
.cardLabel, .text-area, .text-field{
    -fx-font-size: 24;
}

.cardLabel{
    -fx-text-fill: black;
    -fx-font-size: 18;
}
.customerRecipe{
    -fx-text-fill: black;
}
.button{
    -fx-background-color: rgba(0,0,0,0);
    -fx-effect: dropshadow(gaussian, rgba(255, 255, 255, 0.5), 5, 0.25, 0.0, 0.0);
    -fx-border-color: white;
    -fx-text-fill:white;
}
.button .content{
    -fx-background-color: transparent;
}


.text-area{
    -fx-background-color: rgba(0,0,0,0.1);
    -fx-border-color: black;
    -fx-text-fill:white;
}
.text-area .content{
    -fx-background-color: transparent;
}
.text-area .scroll-pane{
    -fx-background-color:transparent;
}
.text-area .scroll-pane .viewport{
    -fx-background-color: transparent;
}

.text-area .scroll-pane .content{
    -fx-background-color: transparent;
}

.text-area .scroll-bar:vertical {
    -fx-pref-width: 1;
    -fx-opacity: 0;
}
.text-area .scroll-bar:horizontal {
    -fx-pref-height: 10;
}

.scroll-pane{
     -fx-background-color: rgba(0,0,0,0.1);
     -fx-border-color:black;
}
.scroll-pane .content{
    -fx-background-color:transparent;
}

.scroll-pane .scroll-bar:vertical {
    -fx-pref-width: 1;
    -fx-opacity: 0;
}

.scroll-pane .viewport{
    -fx-background-color: transparent;
}

.scroll-pane .scroll-bar:horizontal {
    -fx-pref-height: 10;
}


.text-field{
     -fx-background-color: rgba(0,0,0,0.1);
     -fx-border-color:black;
     -fx-text-fill: white;
}
.text-field .content{
    -fx-background-color:transparent;
}

.text-field .viewport{
    -fx-background-color: transparent;
}

